--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href='/category/3'>Categoria 1</a></li><li><a href='/category/4'>Categoria 2</a></li><li><a href='/category/5'>Categoria 3</a></li><li><a href='/category/6'>Categoria 4</a></li>
+<li><a href='/categories/3'>Android</a></li><li><a href='/categories/4'>Apple</a></li><li><a href='/categories/5'>Google</a></li><li><a href='/categories/6'>Motorola</a></li>
