--- a/views/header.html
+++ b/views/header.html
@@ -46,7 +46,12 @@
                             <li><a href="#"><i class="fa fa-user"></i> Minha Conta</a></li>
                             <li><a href="#"><i class="fa fa-heart"></i> Lista de Desejos</a></li>
                             <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Meu Carrinho</a></li>
-                            <li><a href="#"><i class="fa fa-lock"></i> Login</a></li>
+                            {if="checklogin(false)"}
+                            <li><a href="/profile"><i class="fa fa-lock"></i> {function="getUserName()"}</a></li>
+                            <li><a href="/logout"><i class="fa fa-lock"></i> Sair</a></li>
+                            {else}
+                            <li></li>
+                            {/if}
                         </ul>
                     </div>
                 </div>
