--- a/views/header.html
+++ b/views/header.html
@@ -86,3 +86,22 @@
         </div>
     </div>
     <!-- End header area -->
+    <div class="site-branding-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="logo">
+                        <h1><a href="/"><img src="/res/site/img/logo.png"></a></h1>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="shopping-item">
+                        <a href="/cart">Carrinho - <span class="cart-amunt">R${function="getCartVlSubTotal()"}</span> <i
+                                class="fa fa-shopping-cart"></i>
+                            <span class="product-count">{function="getCartNrQtd()"}</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!-- End site branding area -->
